# block2-preview

./: CMakeLists.txt  backendswitcher.py  pyproject.toml  setup.py
src/dmrg/: qc_parallel_rule.hpp
src/instantiation/big_site_u/: big_site.cpp  csf_big_site.cpp  drt_big_site.cpp  drt_mps.cpp  qc_hamiltonian_big_site.cpp  sci_fock_big_site.cpp  sweep_algorithm_big_site.cpp
src/instantiation/core/: allocator.cpp  batch_gemm.cpp  csr_matrix.cpp  csr_matrix_functions.cpp  fft.cpp  fp_codec.cpp  integral.cpp  integral_general.cpp  iterative_matrix_functions.cpp  matrix.cpp  matrix_functions.cpp
src/instantiation/core_a/: archived_sparse_matrix.cpp  archived_tensor_functions.cpp  cg.cpp  csr_operator_functions.cpp  csr_sparse_matrix.cpp  delayed_sparse_matrix.cpp  delayed_tensor_functions.cpp  expr.cpp  hamiltonian.cpp  operator_functions.cpp  operator_tensor.cpp  parallel_mpi.cpp  parallel_rule.cpp  parallel_tensor_functions.cpp  rule.cpp  sparse_matrix.cpp  state_info.cpp  symbolic.cpp  tensor_functions.cpp
src/instantiation/dmrg_a/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_az/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_g/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_gc/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_gs/: archived_mpo.cpp
src/instantiation/dmrg_gz/: determinant.cpp
src/instantiation/dmrg_k/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_kz/: archived_mpo.cpp  determinant.cpp
src/instantiation/dmrg_u/: archived_mpo.cpp  determinant.cpp  dmrg_driver.cpp  general_mpo.cpp  (+28 more)
(+6 files in other folders)
